<resources>
    <string name="app_name">Habit Track</string>
    <string name="load_habits">Load Habits</string>
    <string name="clear_habits">Clear Habits</string>
    <string name="new_habit">New Habit</string>
    <string name="loading">Loading…</string>
    <string name="new_habit_title_hint">Habit title…</string>
    <string name="save_habit">Save</string>
    <string name="edit_habit">Edit</string>
    <string name="habit_notes">Notes</string>
    <string name="numerical_input_hint">123</string>
    <string name="dash">-</string>
    <string name="arrow_left"><![CDATA[<]]></string>
    <string name="arrow_right"><![CDATA[>]]></string>
    <string name="today">Today</string>
</resources>
