<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kareanra.habittrack.view.GraphViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/graph_previous_day_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/arrow_left"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/graph_today_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="10dp"
            android:text="@string/today"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/graph_next_day_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/arrow_right"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/habit_chart"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        tools:layout_editor_absoluteY="133dp"
        tools:layout_editor_absoluteX="-16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
